[package]
name = "chad-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
bat = "0.24.0"
clipboard = "0.5.0"
console = "0.15.8"
dialoguer = {version ="0.11.0", features = ["history", "completion"]}
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
